--- a/sts4/HMartProject/src/main/resources/application.properties
+++ b/sts4/HMartProject/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.show-sql=true
 #사용할 데이터베이스 종류
 spring.jpa.database=mysql
 #mysql 상세지정
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #jsp setting
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
