--- a/sts4/HMartProject/src/main/resources/application.properties
+++ b/sts4/HMartProject/src/main/resources/application.properties
@@ -22,5 +22,11 @@ spring.mvc.view.suffix=.jsp
 #엔진 다시 껐다 켰다 안 하고 새로고침만 하면 되도록
 spring.devtools.livereload.enabled=true
 
+#최대 파일 크기 설정 (단일 파일)
+spring.servlet.multipart.max-file-size=10MB
+
+#최대 요청 크기 설정 (모든 파일)
+spring.servlet.multipart.max-request-size=10MB
+
 
 
