--- a/sts4/SpringBootJpa/pom.xml
+++ b/sts4/SpringBootJpa/pom.xml
@@ -26,6 +26,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<!--추가-->
+		<dependency>
+    		<groupId>mysql</groupId>
+   			 <artifactId>mysql-connector-java</artifactId>
+    		<version>8.0.33</version>
+		</dependency>
 
 	<!-- https://mvnrepository.com/artifact/jstl/jstl -->
 	<dependency>
